[package]
name = "simon-cheng"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-functional = { git = "https://github.com/yewstack/yew"}
yew-services = { git = "https://github.com/yewstack/yew"}
yew = { git = "https://github.com/yewstack/yew"}